--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,46 @@
 stages:
+  - validate
   - test
 
-test-job:
+variables:
+  MICRONAUT_GRADLE_PROPERTIES: "gradle.properties"
+
+validate-migrations:
   stage: test
+  before_script:
   script:
-    - echo "Начало"
-    - echo "Второй этап"
-    - echo "Конец"
+    - echo "Начало теста билда"
+    - ./gradlew build
+    - echo "Тест билда завершён"
+
+#validate-gradle-properties:
+#  stage: validate
+#  before_script:
+#    - python3 -m venv $VENV_PATH
+#    - source $VENV_PATH/bin/activate
+#    - pip install --upgrade pip
+#    - pip install -r requirments.txt
+#  script:
+#    - echo "Проверка настроек Micronaut"
+#    - python3 manage.py check
+#    - echo "Настройки Micronaut валидны"
+#
+#validate-migrations:
+#  stage: test
+#  before_script:
+#  script:
+#    - echo "На"
+#    - python3 manage.py makemigrations --check --dry-run
+#    - echo "Миграции Micronaut валидны"
+#
+#test-staticfiles:
+#  stage: test
+#  before_script:
+#    - python3 -m venv $VENV_PATH
+#    - source $VENV_PATH/bin/activate
+#    - pip install --upgrade pip
+#    - pip install -r requirments.txt
+#  script:
+#    - echo "Проверка статик-файлов Micronaut"
+#    - python3 manage.py makemigrations collectstatic --noinput --dryrun
+#    - echo "Статические файлы Micronaut валидны"
