--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,13 @@ stages:
 
 variables:
   MICRONAUT_GRADLE_PROPERTIES: "gradle.properties"
+  JAVA_HOME: "/usr/bin/java"
 
 test_build:
   stage: test
+  before_script:
+    - export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+    - export PATH=$JAVA_HOME/bin:$PATH
   script:
     - echo "Начало теста билда"
     - chmod +x gradlew
