--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test_build:
   script:
     - echo "Начало теста билда"
     - chmod +x gradlew
-    - ./gradlew build --no-daemon -Dorg.gradle.java.installations.auto-detect=false
+    - ./gradlew build x test --no-daemon -Dorg.gradle.java.installations.auto-detect=false
     - echo "Тест билда завершён"
 
 #validate-gradle-properties:
